# sar-agent-mvp

./: .env.template  .gitignore  AGENT_TESTING_GUIDE.md  DEPLOYMENT_GUIDE.md  Dockerfile  README.md  SETUP.md  TEAM_DEVELOPMENT_GUIDE.md  agent_orchestrator.py  analysis_results.json  check_test_status.py  cleanup_redis.sh  create_env.py  custom_analysis_results.json  deploy_to_aws.sh  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  example_usage.py  gemini-test.py  my_instructions.txt  pyproject.toml  quick_test.py  requirements.txt  setup.sh  start_sar_system.sh  team_dev.sh  test_agent.py  test_single_agent.py  test_single_agent.sh  test_system.sh  web_monitor.py
.github/workflows/: agent-smoke.yml
agents/: Interview_agent.py  __init__.py  base_agent.py  weather.py
agents/api_gateway/: Dockerfile  main.py  requirements.txt
agents/cluemeister/: Dockerfile  fact_graph.py  knowledge_graph.py  knowledge_grounding.py  main.py  requirements.txt  test_cluemeister.py  verification.py
agents/command_agent/: Dockerfile  README.md  cli.py  graph.py  main.py  requirements.txt  task_tracker.py  tools.py
agents/health/: Dockerfile  README.md  __init__.py  main.py  requirements.txt  test_health_agent.py
agents/history/: Dockerfile  README.md  helper.py  isrid2searches4calpoly_output.csv  isrid_parsing.py  main.py
agents/interview/: Dockerfile  main.py  test_interview.py
agents/logistics/: Dockerfile  communications_agent.py  logistics_chief.py  main.py  resource_supply_agent.py  transportation_agent.py
agents/mission_controller/: Dockerfile  __init__.py  main.py  requirements.txt
agents/path_analysis/: Dockerfile  README.md  classifier.py  (+8 more)
data/: inventory_equipment.csv  inventory_personnel.csv
eval/: agent_client.py  golden.jsonl  local_adapter_weather.py  smoke_test.py  weather.jsonl
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
scripts/: cleanup_redis.sh  demo.sh  integration_test.py  refresh-ci-token.sh  seed_data.py  test_level2.py  test_level3.py
shared/: __init__.py  a2a_envelope.py  mcp_tools.py  redis_bus.py
tests/: quick_test.py
utils/: redis_bus.py
(+5127 files in other folders)
