[tool.poetry]
name = "sar-agent-mvp"
version = "0.1.0"
description = ""
authors = ["yuki011121 <tyy17723818165@126.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10, <3.14" 
requests = "^2.32.4"
redis = "^6.2.0"
pyautogen = "^0.9"
ultralytics = "^8.1.0"
pillow = "^10.0.0"
deepface = "^0.0.84"
face-recognition = "^1.3.0"
opencv-python = "^4.8.0"
numpy = "^1.24.0"
kaggle = "^1.7.4.5"
pandas = "^2.3.1"
openai = "^1.95.1"
scikit-learn = "^1.7.1"
google-generativeai = "^0.8.5"
pydantic = ">=2.6.0"
osmnx = "^2.0.5"
scipy = "^1.11"
flask = "^3.0.0"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
