[tool.poetry]
name = "sar-agent-mvp"
version = "0.1.0"
description = ""
authors = ["yuki011121 <tyy17723818165@126.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10, <3.14" 
requests = "^2.32.4"
redis = "^6.2.0"
pyautogen = "^0.9"
pandas = "^2.3.1"
openai = "^1.95.1"
scikit-learn = "^1.7.1"
agentic-mvp-shared = {git = "https://github.com/RandomCyberCoder/Agentic-MVP-Shared.git"}
sentence-transformers = "^5.1.0"
qdrant-client = "^1.15.1"
joblib = "^1.5.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pylint = "^3.3.8"
deepeval = "^3.5.1"
vulture = "^2.14"
pydeps = "^3.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
